rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-41af667b7d22953d.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-41af667b7d22953d: leading-comma.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-41af667b7d22953d.d: leading-comma.rs

leading-comma.rs:
